<resources>
  <string name="appName">My Spectra</string>
  <string name="txt_make_life_better">#MakeLifeBetter</string>
  <string name="txt_enter_mobile_number">Hi! Let\'s get started</string>
  <string name="enter_username_password">Hi! Let\'s get started</string>
  <string name="txt_mobile_number">Registered Mobile Number</string>
  <string name="pleaseEnterMobile">Please Enter Mobile Number</string>
  <string name="mobile_number">Mobile Number</string>
  <string name="enter_email">Please enter email id</string>
  <string name="enter_mobile">Please enter mobile number</string>
  <string name="txt_login_via_username">Username</string>
  <string name="txt_login_via_mobile">Mobile Number</string>
  <string name="enter_details">Enter your username and password</string>
  <string name="txt_username">Username</string>
  <string name="txt_password">Password</string>
  <string name="txt_show">SHOW</string>
  <string name="txt_hide">HIDE</string>
  <string name="txt_login">Login</string>
  <string name="company_name">Company Name</string>
  <string name="txt_forgot_password">Forgot Username/Password?</string>
  <string name="txt_edit">Edit</string>
  <string name="enter_otp">Please enter the 4 digits OTP below</string>
  <string name="txt_verify">Verify</string>
  <string name="txt_submit">Submit</string>
  <string name="billing_contact">Billing Contact</string>
  <string name="technical_contact">Technical Contact</string>
  <string name="gd_mrng">Good Morning</string>
  <string name="gd_afternoon">Good Afternoon</string>
  <string name="months">Months</string>
  <string name="gd_eve">Good Evening</string>
  <string name="get_the_code">Didn’t get the OTP?</string>
  <string name="no_internet">No Internet Access Please retry later</string>
  <string name="txt_resend">Resend</string>
  <string name="come_back_later">Please come back later</string>
  <string name="send_otp">Send OTP</string>
  <string name="activation_in_progress">Account activation is in progress</string>
  <string name="validation_username">Please enter Username</string>
  <string name="validation_password">Please enter Password</string>
  <string name="invalid_otp">Oops! OTP does not match</string>
  <string name="txt_enter_registered_canid">Enter your CAN ID to reset \n your password.</string>
  <string name="txt_enter_registered_username">Enter your Username to reset \n your password.</string>
  <string name="invoice_no">Invoice No.</string>
  <string name="amount">Amount</string>
  <string name="amount_cannot_be_empty">Payable amount can\'t be empty</string>
  <string name="amount_cannot_be_0">Payable amount can\'t be 0</string>
  <string name="tds_amt">TDS Amount</string>
  <string name="unpaid_amt">Unpaid Balance</string>
  <string name="unlimited_data">Hurrey! <font fgcolor='#ffffff'>\nYou have \nunlimited data \nto enjoy.</font></string>
  <string name="invoice_period">Invoice Period</string>
  <string name="try_again">Try again</string>
  <string name="invoice_amt">Invoice Amount</string>
  <string name="opening_amt">Opening Balance</string>
  <string name="oops">Oops, Something went wrong</string>
  <string name="please_try">Please try again later</string>
  <string name="due_date">Due Date</string>
  <string name="new_connection">New Connection</string>
  <string name="support_line">Support Line</string>
  <string name="view">VIEW</string>
  <string name="download">Download</string>
  <string name="total_outstanding_amount">Outstanding Amount</string>
  <string name="out_amt">Total outstanding amount</string>
  <string name="pay_now">PAY NOW</string>
  <string name="change_plan">Change Plan</string>
  <string name="select_package">Select Plan</string>
  <string name="from">From</string>
  <string name="select_date">Select Date</string>
  <string name="to">To</string>
  <string name="invoice_details">Invoice Details</string>
  <string name="invoice_date">Invoice Date</string>
  <string name="view_details">View Details</string>
  <string name="data_usage">Data Usage</string>
  <string name="can_id">CAN ID</string>
  <string name="due_date_color"><font fgcolor='#F67A71'>(Due Date)</font></string>
  <string name="transaction_number">Transaction No.</string>
  <string name="transaction_date">Transaction Date</string>
  <string name="type">Type</string>
  <string name="no_sr">Hurrey! \n There is no service request</string>
  <string name="payment_successful">Payment Successful</string>
  <string name="unable_to_process">We were unable to process your  \n payment.</string>
  <string name="raise_new_request">Raise New Request</string>
  <string name="close_app">Close app</string>
  <string name="sr_number">SR Number</string>
  <string name="problem_type">Problem Type</string>
  <string name="problem_sub_type">Problem Sub Type</string>
  <string name="expected_resolution_time">Expected Resolution Time</string>
  <string name="plan_name">Plan Name</string>
  <string name="payment_amount">Your payment of INR</string>
  <string name="charges">Charges</string>
  <string name="no_request_found">No Request Found</string>
  <string name="logout_msg">Are you sure you want to logout?</string>
  <string name="txt_logout">Logout</string>
  <string name="upload_profile_picture">Upload Profile picture</string>
  <string name="plan_description">Plan Description</string>
  <string name="email_id">Email ID</string>
  <string name="no_dues">No Dues</string>
  <string name="can_select_max_one">you can select maximum period of 1 year</string>
  <string name="no_blank_date">Cannot select back date</string>
  <string name="exit_msg">Do you want to exit ?</string>
  <string name="installation_address">Installation Address</string>
  <string name="add_new_account">Add New Account</string>
  <string name="reset_password_for">Reset Password for</string>
  <string name="we_shared">We have shared your login details on</string>
  <string name="please_confirm_change">Please confirm that you want to change your plan</string>
  <string name="your_number">your registered email id and</string>
  <string name="registered_email">Registered Mobile Number.</string>
  <string name="back_to_home">Back to home</string>
  <string name="select_issue_type">Please select issue type</string>
  <string name="enter_description">Please enter description</string>
  <string name="back_to_login">Back To Login</string>
  <string name="showing_mrtg_graph">Showing MRTG Graph For</string>
  <string name="search_by_sr">Search by SR number…</string>
  <string name="search_by_keyword">Search by keywords…</string>
  <string name="successfully_received">is successfully received.</string>
  <string name="billing_address">Billing Address</string>
  <string name="account_cancelled">Account Cancelled</string>
  <string name="please_create_new">Your Account is currently cancelled. \nTo Re-activate your account</string>
  <string name="back_to_sr">Back to sr</string>
  <string name="amt_to_pay">Amount to pay</string>
  <string name="ok">OK</string>
  <string name="back_to_account">Back To Account</string>
  <string name="enter_tds">Enter TDS Amount \n( up to </string>
  <string name="value_percent"> of billed amount)</string>
  <string name="sr_requested">Your service request has been \n submitted successfully. Your service \n request number is</string>
  <string name="proceed">proceed</string>
  <string name="request_number">request number is </string>
  <string name="please_select_dates">Please select date range.</string>
  <string name="create_7_sr">I want to re-activate my services</string>
  <string name="txt_24_hours">24 hours</string>
  <string name="txt_today">Today</string>
  <string name="txt_yesterday">Yesterday or Last Day</string>
  <string name="last_seven_days">Last 7 Days</string>
  <string name="can_">CAN ID- </string>
  <string name="this_week">This week</string>
  <string name="last_week">Last week</string>
  <string name="last_30_days">"Last 30 days"</string>
  <string name="this_month">This Month</string>
  <string name="last_month">Last Month</string>
  <string name="last_365_days">Last 365 Days</string>
  <string name="last_2_years">Last 2 years</string>
  <string name="this_year">This Year</string>
  <string name="date_format_MMM_yyyy">MMM yyyy</string>
  <string name="date_format_yyyy_MM_dd">yyyy-MM-dd</string>
  <string name="please_enter_can">Please enter CAN ID</string>
  <string name="confirmation_text">Thank you for sharing your CAN ID. We have shared the details on your registered email and mobile number to reset your password.</string>
  <string name="cancel">Cancel</string>
  <string name="my_account">My Account</string>
  <string name="reactivate_now">Reactivate now</string>
  <string name="menu">Menu</string>
  <string name="my_sr">My SR</string>
  <string name="payments">Payments</string>
  <string name="home">Home</string>
  <string name="get_help">Get Help</string>
  <string name="logout">Logout</string>
  <string name="payment_declined">Payment Declined</string>
  <string name="unable_to_pay">We were unable to process  your payment.</string>
</resources>