<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/paymentFail"
    android:visibility="gone"
    android:gravity="center_vertical"
    android:background="@color/colorPrimaryDark">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_payment_status"
            android:layout_width="@dimen/_60sdp"
            app:srcCompat="@drawable/ic_attention"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_60sdp" />
        <TextView
            android:id="@+id/txt_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:textColor="@color/resend_txt_color"
            android:layout_gravity="center_horizontal"
            android:text="@string/payment_declined"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:padding="@dimen/_5sdp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/payment_amount"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_1sdp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/unable_to_pay"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/backToHomeFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:drawableEnd="@drawable/ic_expand_button"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_30sdp"
        android:textColor="@color/white"
        android:paddingTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_19sdp"
        android:paddingEnd="@dimen/_19sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:background="@drawable/login_background"
        />
</LinearLayout>