<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/no_internet"
    android:visibility="gone"
    android:gravity="center_vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_payment_status"
        android:layout_width="@dimen/_60sdp"
        app:srcCompat="@drawable/ic_car_and_cliff"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/_60sdp" />
    <TextView
        android:id="@+id/txt_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:text="@string/oops"/>


    <TextView
        android:id="@+id/txt_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:text="@string/please_try"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:drawableEnd="@drawable/ic_arrow_white"
        android:textSize="@dimen/btn_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColor="@color/white"
        android:paddingTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_19sdp"
        android:paddingEnd="@dimen/_19sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:background="@drawable/login_background"
        />
</LinearLayout>