<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dial_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_new_account"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_can_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:maxEms="20"
                android:maxLength="20"
                android:layout_centerHorizontal="true"
                android:hint="@string/can_id"
                android:background="@null"
                android:singleLine="true"
                android:backgroundTint="@null"
                />
            <View
                android:id="@+id/view_can"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorAccent"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:maxEms="20"
                android:maxLength="20"
                android:layout_centerHorizontal="true"
                android:hint="@string/registered_email"
                android:background="@null"
                android:singleLine="true"
                android:backgroundTint="@null"
                />
            <View
                android:id="@+id/view_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorAccent"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
          android:layout_marginTop="@dimen/_30sdp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/back_color"
                android:textSize="@dimen/_14sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textAllCaps="true"
                android:layout_centerVertical="true"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_otp"
                android:textAllCaps="true"
                android:drawableEnd="@drawable/ic_arrow_white"
                android:textSize="16sp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:paddingTop="@dimen/_10sdp"
                android:paddingStart="@dimen/_19sdp"
                android:paddingEnd="@dimen/_19sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:background="@drawable/login_background"
                android:layout_marginStart="@dimen/_10sdp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>